# dexter-backend-provider-sync-challenge

./: .gitignore  README.md  pyproject.toml
data/: existing_residents.json  provider_page_1.json  provider_page_2.json  provider_page_judgment.json  provider_page_with_errors.json
docs/: PROVIDER_API.md
src/dexter_sync/: __init__.py  exceptions.py  models.py  provider_client.py  repository.py  sync.py
tests/: conftest.py  test_public_provider_client.py  test_public_sync.py  test_sync_reliability.py
